[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Dmitry Drygalev <campermailru@mail.ru>"]
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
